compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_field_access_non_record.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/field_access_non_record.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × field access requires a record
   ╭─[tests/fixtures/diagnostics/types/field_access_non_record.ml:3:19]
 2 │   let value = 42;
 3 │   let projected = value.field;
   ·                   ─────┬─────
   ·                        ╰── this value has type `i64`, so it has no field named `field`
 4 │   println("bad")
   ╰────
  help: access a field on a record value or remove the field projection
